# StudyLine

./: README.md  docker-compose.yml
.github/workflows/: static.yml
api/: .env  Cargo.toml  Dockerfile  college-schedule-firebase.json
api/src/: config.rs  db.rs  errors.rs  main.rs  redis.rs  swagger.rs
api/src/auth/: handlers.rs  middleware.rs  mod.rs
api/src/migrations/: 20250925162404_create_groups.sql  20250925162421_create_teachers.sql  20250925162425_create_subjects.sql  20250925162502_create_schedule.sql  20250925162513_create_schedule_changes.sql  20251115144956_create_teacher_links.sql
api/src/models/: auth.rs  fcm.rs  group.rs  mod.rs  schedule.rs  schedule_changes.rs  subject.rs  teacher.rs  teacher_links.rs
api/src/routes/: fcm.rs  groups.rs  mod.rs  schedule.rs  schedule_changes.rs  subjects.rs  teacher_links.rs  teachers.rs
api/src/services/: auth.rs  mod.rs  notifications.rs
api/src/traits/: groups.rs  mod.rs  schedule.rs  schedule_changes.rs  subjects.rs  teacher_links.rs  teachers.rs
studyline-front/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
studyline-front/src/: App.tsx  constants.ts  index.css  main.tsx
studyline-front/src/api/: client.ts  (+3 more)
studylineapp/: README.md  pubspec.yaml
studylineapp/android/: build.gradle.kts
studylineapp/lib/: api.dart  app_state.dart  main.dart  models.dart  utils.dart
studylineapp/linux/: CMakeLists.txt
studylineapp/test/: widget_test.dart
studylineapp/web/: index.html  manifest.json
studylineapp/windows/: CMakeLists.txt
(+44 files in other folders)
